test/1.3/basedocs/valid/learning/learningPlan.001.dita
<?xml version="1.0" encoding="utf-8"?>
<learningPlan id="learningPlan.001" shellPackage="learning" shellName="learningPlan">
 <title>Learning Plan</title>
 <shortdesc>The short description</shortdesc>
  <learningPlanbody>
    <lcIntervention>
      <title>Intervention</title>
      <lcInterventionItem>
        <title>Intervention Item</title>
        <lcAssessment>This is an assessment.</lcAssessment>
      </lcInterventionItem>
    </lcIntervention>
  </learningPlanbody>
</learningPlan>
