test/1.3/basedocs/invalid/learning/learningSummary.001.dita
<?xml version="1.0" encoding="utf-8"?>
<learningSummary id="learningSummary.001" shellPackage="learning" shellName="learningSummary">
 <title>Learning Summary</title>
 <shortdesc>The short description</shortdesc>
</learningSummary>
